upoading to individual galleries then redirecting to the gallery you uploaded

--- a/base/templates/base/individual_gallery.html
+++ b/base/templates/base/individual_gallery.html
@@ -53,7 +53,7 @@
 </style>
 
 <div class="grid-container">
-    <div class="grid-item"><a class="upload-new" href="{% url "base:upload_photo" %}">Upload new images</a></div>
+    <div class="grid-item"><a class="upload-new" href="{% url "base:photo_upolad_to_gallery" pk=pk %}">Upload new images</a></div>
     <div class="grid-item"><a class="upload-new" href="{% url "base:download_all" %}">Download all</a></div>
     <div class="grid-item"><a class="upload-new" href="{% url "base:galleries" %}">Galleries</a></div>
 </div>
